welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:7: error: ';' expected but 'false' found.
      retrun false
             ^