welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
  if (equalOk==true){
    if (a<=b && b<=c){
      return true
    }
    else{
      retrun false
    }
  }
  else{
    if (a<b && b<c){
      return true
    }
    else{
      return false
    }
    
  }
}